--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -11,7 +11,7 @@
     <VoiceList/>
 
     <div class="header">
-        <label>ay</label>
+        <label></label>
         <label class="subtitle"></label>
     </div>
 </root>
