--- a/code/ui/ScreenImage.razor.scss
+++ b/code/ui/ScreenImage.razor.scss
@@ -1,17 +1,20 @@
 ScreenImage {
-    pointer-events: none;
     color: white;
-    cursor: none;
+    cursor: default;
+    pointer-events: all;
 
     position: absolute;
     width: 100%;
     height: 100%;
     background-size: 100%;
-    background-image: url(ui/black_transparent.png);
+    background-image: url(ui/black.png);
+
+    align-items: center;
+    justify-content: center;
 
     image {
         position: absolute;
-        width: 100%;
+        // width: 100%;
         height: 100%;
         aspect-ratio: 1;
         image-rendering: pixelated;
