--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -7,8 +7,8 @@
 @attribute [StyleSheet]
 
 <root>
-    <ChatBox/>
-    <VoiceList/>
+    <ChatBox />
+    <VoiceList />
 
     <div class="header">
         <label></label>
@@ -30,5 +30,19 @@
         var showCursor = (Game.LocalPawn is Pawn p && p.ShowCursor());
         SetClass("pointer-visible", showCursor);
         @* Log.Info("showcursor: "+showCursor); *@
+    }
+
+    public override void OnButtonEvent(ButtonEvent e)
+    {
+        @* Log.Info("Hud: " + e.Button); *@
+
+        if (e.Pressed)
+        {
+            var p = Game.LocalPawn as Pawn;
+            if (p.IsValid() && p.Machine.IsValid())
+            {
+                p.Machine.PressedUI(e.Button);
+            }
+        }
     }
 }
